--- a/package.json
+++ b/package.json
@@ -15,5 +15,10 @@
         "babel-polyfill": "6.26.0",
         "babel-preset-env": "1.6.1",
         "jest": "21.2.1"
-    }
+    },
+    "jest": {
+        "globals": {
+          "__DEV__": true
+        }
+      }
 }
